# FEM-tetrahedrons

./: CMakeLists.txt  README.md  compile_win.bat
reports/: lab_1.docx  ~$lab_3.docx  Копия lab_1.wbk  Копия lab_2.wbk
reports/books/: Ссылка на статью.txt
res/books/: Разраб.и реализация алгоритмов трехмерной триангуляции сложных пространств.областей.html
res/books/Разраб.и реализация алгоритмов трехмерной триангуляции сложных пространств.областей_files/: paperno.css
res/input/: boundary сonditions.txt  domain.txt  grid.json  mesh.txt  parameters.json  parameters.txt
res/output/: elements.txt  hexahedron subdomains.txt  nodes.txt  solution.txt
res/reports/: lab_1.docx  lab_2.docx  ~$lab_1.docx  ~$lab_3.docx  Копия lab_1.wbk  Копия lab_2.wbk
src/: dimensions.h  functions.h  main.cpp
src/FEM/: FEM.cpp  FEM.h  LocalAssembly.cpp  LocalAssembly.h  differentiation.cpp  differentiation.h
src/SLAE/: SparseSLAE.cpp  SparseSLAE.h
src/grid/: Grid.cpp  Grid.h  TransformCubeToHexagon.cpp  TransformCubeToHexagon.h
src/grid visualization/: drawelements.py
src/vector/: FiniteMatrixVector.h  MatrixVector.cpp  MatrixVector.h
src/visualization/: draw elements.py  drawelements.py  grid.py  isolines visualize.py  visualize.py  visualize_2.py
